# SnapSheet

Android/snapsheetandroid/: settings.gradle
Android/snapsheetandroid/app/: build.gradle
Android/snapsheetandroid/app/src/main/: AndroidManifest.xml
Android/snapsheetandroid/app/src/main/res/layout/: activity_course.xml  activity_main.xml  course_layout.xml  quiz.xml  sign_in.xml
Android/snapsheetandroid/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/snapsheetandroid/app/src/main/res/values-night/: themes.xml
Android/snapsheetandroid/gradle/wrapper/: gradle-wrapper.properties
OCR/: main.py
OCR_new/: check.py
Practice/Cards/: BootstrapCards.html
Practice/MongoDB_Practice/demoProject/CrudAPI/: api_check.py  apps.py  models.py  serializers.py  urls.py  views.py
Practice/MongoDB_Practice/demoProject/CrudAPI/migrations/: 0001_initial.py
Practice/MongoDB_Practice/demoProject/demoProject/: settings.py  urls.py
web/: .env  .gitignore  API_Documentation.txt  check.py  db.sqlite3  pyproject.toml
web/API/: urls.py  views.py
web/CreateCourse/: apps.py  urls.py  views.py
web/CreateCourse/templates/CreateCourse/: addCourse.html
web/Utils/: utils.py
web/project_root/: asgi.py  settings.py  urls.py  views.py  wsgi.py
web/sheets/: add_assessment.py  add_mark.py  int_to_col.py  keys.json  read.py  write.py
web/static/asset/css/: style.css
web/templates/: base.html  dashboard.html  index.html  search.html
web/templates/assets/css/: style.css  style02.css
(+5 files in other folders)
